--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <h2 class="mb-5 js-dom-ready hidden">DOM is now ready</h2>
             <div class="container py-5 px-5 mx-auto">
                 <div class="row">
-                    <div id="form-container" class="col-6">
+                    <div id="form-container" class="col-sm-12 col-lg-6">
                         <h1>Inscription</h1>
 
                         <form
@@ -115,7 +115,7 @@
                                 <div class="container">
                                     <div class="row">
                                         <label
-                                            class="col-8 px-0 pb-2"
+                                            class="col-sm-12 col-lg-8 px-0 pb-2"
                                             for="fbirthday"
                                             >Date de naissance*
                                         </label>
@@ -149,7 +149,7 @@
                                 <div class="container">
                                     <div class="row">
                                         <label
-                                            class="col-6 px-0 pb-2"
+                                            class="col-sm-12 col-lg-8 px-0 pb-2"
                                             for="fpassword"
                                             >Mot de passe*</label
                                         >
@@ -215,7 +215,7 @@
                             </div>
                         </form>
                     </div>
-                    <div id="slider" class="col-6">
+                    <div id="slider" class="col-sm-12 col-lg-6">
                         <div
                             id="carouselExampleCaptions"
                             class="carousel slide"
