--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
                                 </div>
                             </div>
 
-                            <div class="col-4 mb-3 px-0">
+                            <div class="col-5 mb-3 px-0">
                                 <div class="container">
                                     <div class="row">
                                         <label
-                                            class="col-sm-12 col-lg-8 px-0 pb-2"
+                                            class="col-sm-12 col-lg-10 px-0 pb-2"
                                             for="fbirthday"
                                             >Date de naissance*
                                         </label>
@@ -145,7 +145,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-4 px-0">
+                            <div class="col-lg-6 col-sm-6 px-0">
                                 <div class="container">
                                     <div class="row">
                                         <label
@@ -178,7 +178,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-4 px-0">
+                            <div class="col-lg-6 col-sm-6 px-0">
                                 <div class="container">
                                     <div class="row">
                                         <label
