fixing reveal password function, style tag added on html to set cursor pointer when hovering reveal password spans

--- a/src/index.html
+++ b/src/index.html
@@ -161,7 +161,7 @@
                                         minlength="12"
                                         required
                                     />
-                                    <span class="input-group-text js-reveal-password"
+                                    <span class="cursor-pointer input-group-text js-reveal-password"
                                         ><i
                                             class="bi bi-eye font-secondary"
                                             style="font-size: 1rem"
@@ -202,7 +202,7 @@
                                         minlength="12"
                                         required
                                     />
-                                    <span class="input-group-text"
+                                    <span class="cursor-pointer input-group-text js-reveal-password"
                                         ><i
                                             class="bi bi-eye font-secondary"
                                             style="font-size: 1rem"
@@ -345,5 +345,10 @@
             </div>
         </main>
         <script type="module" src="./js/main.js"></script>
+        <style>
+            .cursor-pointer{
+                cursor: pointer;
+            };
+        </style>
     </body>
 </html>
