almost finished form validation, working on an alternative for the carousel using swiper.js library

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 
     <body>
         <main class="p-5 mx-auto">
-            <h2 class="mb-5 js-dom-ready hidden">DOM is now ready</h2>
+            <h2 class="mb-5 js-dom-ready hidden">Formulaire d'inscription</h2>
             <div class="container py-5 px-3 mx-auto">
                 <div class="row">
                     <div id="form-container" class="col-sm-12 col-lg-6">
@@ -226,7 +226,7 @@
                                 <!-- </div> -->
                             </div>
                             <div class="col-6 px-0 my-5">
-                                <button type="submit">S'enregistrer</button>
+                                <button type="submit" class="btn btn-primary">S'enregistrer</button>
                             </div>
                         </form>
                     </div>
