'* Champs obligatoires' message added next to validation button

--- a/src/index.html
+++ b/src/index.html
@@ -242,11 +242,20 @@
                                 <!-- </div> -->
                                 <!-- </div> -->
                             </div>
-                            <div class="col-6 px-0 my-5">
-                                <button type="submit" class="btn btn-primary">
-                                    Valider mon inscription
-                                </button>
+
+                            <div class="container">
+                                <div class="row align-items-center">
+                                    <div class="col-3 px-0 my-5">
+                                        <small>* Champs obligatoires</small>
+                                    </div>
+                                    <div class="col-4 px-0 my-5">    
+                                        <button type="submit" class="btn btn-primary">
+                                            Valider mon inscription
+                                        </button>
+                                    </div>
+                                </div>
                             </div>
+                            
                         </form>
                     </div>
                     <div id="slider" class="col-sm-12 col-lg-6 d-flex align-items-center">
